      views (LP: #610688)
    - fix visual glitch when navigating back to a subcategory
      list view from a details view (LP: #611108)
  * debian/control:
    - add depends python-debian (>= 0.1.15)
  * softwarecenter/backend/channel.py:
    - add an "App Expo" item in the left navigation pane for
      display of the contents of the (for now) app review
      board PPA

  [ Michael Vogt ]
  * softwarecenter/view/widgets/actionbar.py:
    - fix crash in action buttons
  * softwarecenter/db/update.py:
    - support additional metadata from Packages file for the
      "Whats new" repository (and possible others)
    - add axi catalogedtime information to the app-install-data
      DB
  * softwarecenter/db/database.py:
    - export parse_axi_values_file()
  
  [ Bilal Akhtar ]
  * softwarecenter/app.py:
    - Prevent About dialog from being set as modal. (LP: #550955)

  [ Michael Bienia ]
  * softwarecenter/apt/apthistory.py,
    softwarecenter/view/historypane.py:
    - fix DeprecationWarning at startup (LP: #602310)

 -- Gary Lasker <gary.lasker@canonical.com>  Thu, 29 Jul 2010 00:03:32 -0400

software-center (2.1.6) maverick; urgency=low

  [ Kiwinote ]
  * data/software-center.menu.in:
    - update query for fonts category (LP: #531570, #605459)
  * debian/control:
    - depend on humanity-icon-theme, rather than gnome-icon-theme
  * softwarecenter/app.py:
    - always append the humanity-icon-theme to the iconpath (LP: #436310, #466271, #527503, #556335, #594795)
  * softwarecenter/view/availablepane.py:
    - capitalize 'install n items' button label for mpt (LP: #605052)
  * softwarecenter/view/catview_gtk.py:
    - speed up carousel transition (thanks nuthinking) (LP: #604627)
  * softwarecenter/view/catview.py:
    - allow 'OR' tag inside an 'AND' tag
  
  [ Michael Vogt ]
  * softwarecenter/db/database.py:
    - parse axi values file for cataloged_time support
  * merged lp:~mvo/software-center/new-apps-test1 that adds support